[package]
name = "wasm-flate"
version = "0.1.3"
authors = ["David Holtz <david.richard.holtz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["system", "strings"]
system = ["wee_alloc"]
browser = ["wee_alloc"]
strings = ["base64"]
# default = ["console_error_panic_hook",]

[dependencies]
wasm-bindgen = "0.2.58"
flate2 = "1.0.13"
base64 = {version="0.11.0", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for speed
# opt-level = 3
opt-level = 'z'
lto = true
